  in the `length` column being replicated multiple times.  Additionally, length
  was integer whereas the other ngram measures are numeric resulting in a
  **data.table** warning in `melt`.  Both of these issues have been addressed.

* `colo` did not copy a single term to the clipboard with quotes.  See
  issue #50.

NEW FEATURES

* `get_text` added to extract the original text associated with particular tags.

* `frequent_terms_co_occurrence` added to view the co-occurrence between frequent
  terms.  A combination of `frequent_terms` and `tag_co_occurrence`.

* `term_before`, `term_after`, & `term_first` added to get frequencies of terms
  relative to other terms or specific locations.

* `token_count` added to count the occurrence of tokens within a vector of
  strings.  This function differs from`term_count` in that `term_count` is
  regex based, allowing for fuzzy matching.  This function only searches for
  lower cased tokens (words, number sequences, or punctuation) providing a well
  defined counting function that is faster than `term_count` but less flexible.

* `as_term_list` added.  This is a convenience function to convert a vector of
  terms or a quanteda `dictionary` into a named list.

* `combine_counts` added to enable combining `term_count` and `token_count`
  objects.

* `match_word` added to match words to regular expressions.  Roughly equivalent
  **qdap**'s `term_match`.

* `read_term_list`/`write_term_list` added to aid in the reading in/writing out
  and formatting of term list files.

* `classification_template` added to manually add a classification script
  template.  This template has a suggested **termco** based workflow that may be
  useful for classification projects.

* `test_regex` added to test an atomic vector, list, or term list of regexes for
  validity.

* `mutate_termco` added to apply a normalizing function to all the term columns
  of a `termco` object without stripping the attributes and class.

MINOR FEATURES
