@@ -87,6 +87,7 @@ export(plot_ca)
 export(plot_counts)
 export(plot_cum_percent)
 export(plot_freq)
+export(plot_upset)
 export(probe_colo_list)
 export(probe_colo_plot)
 export(probe_colo_plot_list)
